add novas funcoes - feito
